@@ -40,6 +40,9 @@ import com.pi4j.io.gpio.GpioBase;
  *
  * @author Robert Savage (<a href="http://www.savagehomeautomation.com">http://www.savagehomeautomation.com</a>)
  * @version $Id: $Id
+ * @param <CONFIG_TYPE>
+ * @param <DIGITAL_TYPE>
+ * @param <PROVIDER_TYPE>
  */
 public abstract class DigitalBase<DIGITAL_TYPE extends Digital<DIGITAL_TYPE, CONFIG_TYPE, PROVIDER_TYPE>,
         CONFIG_TYPE extends DigitalConfig<CONFIG_TYPE>,
@@ -92,7 +95,7 @@ public abstract class DigitalBase<DIGITAL_TYPE extends Digital<DIGITAL_TYPE, CON
     public DIGITAL_TYPE bind(DigitalBinding ... binding) {
         return bindings.bind(binding);
 
-        //bindings.addAll(Arrays.asList(binding));
+        //bindings.addAll(List.of(binding));
         //return (DIGITAL_TYPE)this;
     }
 
@@ -100,7 +103,7 @@ public abstract class DigitalBase<DIGITAL_TYPE extends Digital<DIGITAL_TYPE, CON
     @Override
     public DIGITAL_TYPE unbind(DigitalBinding ... binding) {
         return bindings.unbind(binding);
-        //bindings.removeAll(Arrays.asList(binding));
+        //bindings.removeAll(List.of(binding));
         //return (DIGITAL_TYPE)this;
     }
 
